--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Privacy Policy for My App</title>
+  <meta property="og:title" content="Privacy Policy for My App">
+  <meta property="og:description" content="Learn how we handle your data.">
+  <meta property="og:image" content="https://ibb.co/6Rdw9S0S"> <!-- Replace with a real image URL -->
+  <meta property="og:url" content="https://thambimuthuanush24.github.io/privacy-policy/">
+  <meta property="og:type" content="website">
 </head>
 <body>
     <h1>Privacy Policy</h1>
