--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Required for Facebook -->
   <meta property="og:title" content="Privacy Policy for My App">
   <meta property="og:description" content="Learn how we handle your data.">
-  <meta property="og:image" content="https://ibb.co/6Rdw9S0S"> <!-- Replace with a real image URL -->
+  <meta property="og:image" content="https://ibb.co/6Rdw9S0S"> <!-- Use your ImgBB URL -->
   <meta property="og:url" content="https://thambimuthuanush24.github.io/privacy-policy/">
   <meta property="og:type" content="website">
+  
+  <!-- Extra validation -->
+  <meta name="twitter:card" content="summary_large_image"> <!-- Helps with sharing -->
 </head>
 <body>
     <h1>Privacy Policy</h1>
     <p>This app collects user data for authentication via Facebook Login. We store only necessary information...</p>
 </body>
 </html>
+
+
